<resources>
    <string name="app_name">SPEED CALCULATOR</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="calculate">calculate</string>
    <string name="speed_calculator" translatable="false">SPEED CALCULATOR</string>
    <string name="clear">clear</string>
    <string name="average_speed_km_h">Average Speed (km/h)</string>
    <string name="enter_time_second">Enter time (second)</string>
    <string name="enter_distance_meter">Enter distance (meter)</string>
    <string name="todoimg" translatable="false">TODOimg</string>
    <string name="todologo" translatable="false">TODOlogo</string>
    <string name="greaterthan">Time must be greater than zero.</string>
    <string name="fieldrequire">Distance and time are required.</string>
    <string name="speedtitle" translatable="false">SPEED CALCULATOR</string>
    <string name="overlimit">Speed is over limit!</string>
</resources>