<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speed_calculator"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/distance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/show"
        android:layout_width="228dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="#FFFFFF"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/todoimg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1000:625"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/speed_meter" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/clear"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/cal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time" />

    <Button
        android:id="@+id/cal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/clear"
        app:layout_constraintTop_toTopOf="@+id/clear" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:shadowColor="#000000"
        android:text="@string/average_speed_km_h"
        android:textColor="#FF0000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/show"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clear" />

    <EditText
        android:id="@+id/distance"
        android:layout_width="246dp"
        android:layout_height="47dp"
        android:layout_marginTop="32dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/enter_distance_meter"
        android:inputType="numberDecimal"
        android:shadowColor="#040303"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:autofillHints="" />

    <EditText
        android:id="@+id/time"
        android:layout_width="246dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:background="#F1F1F1"
        android:ems="10"
        android:hint="@string/enter_time_second"
        android:inputType="numberDecimal"
        android:shadowColor="#000000"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distance"
        android:autofillHints="" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="68dp"
        android:layout_height="81dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:contentDescription="@string/todologo"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.493"
        app:srcCompat="@drawable/red_cow" />

</androidx.constraintlayout.widget.ConstraintLayout>